--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "mock-server",
   "version": "0.1.0",
   "description": "",
-  "main": "index.js",
+  "main": "mock-server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
