--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@ifelseapps/mock-server",
+  "name": "ifelseapps-mock-server",
   "version": "0.1.0",
   "description": "Simple mock server for debug",
   "main": "mock-server.js",
